# ElaWidgetTools

./: .gitignore  CMakeLists.txt  CMakePresets.json  config.template.cmake
ElaWidgetTools/: ElaWidgetToolsConfig.cmake.in
ElaWidgetToolsExample/: CMakeLists.txt
